css/messages.css
header h1 {
    display: block;
}

header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 0.5rem 0.5rem 0 0.5rem;
}

#messages-link {
    display: none;
}

#messages-divider {
    display: none;
}

.container {
    display: flex;
    flex-direction: row;
    margin: 0 0.5rem 0 0.5rem;
    gap: 1rem;
    min-height: calc(100vh - 80px);
}

.user-panel {
    width: 30%;
    min-width: 30%;
    max-width: 30%;
    display: flex;
    flex-direction: column;
    padding-right: 1rem;
    overflow: hidden;
}

.conversation-panel {
    flex: 1;
    min-width: 0;
    display: flex;
    flex-direction: column;
    padding-left: 1rem;
    overflow: hidden;
}

.vertical-divider {
    width: 1px;
    background-color: #000;
    height: auto;
    align-self: stretch;
}

.message-placeholder {
    padding: 2rem;
    text-align: center;
    color: #888;
    margin-top: auto;
    margin-bottom: auto;
}

.search-container {
    display: flex;
    flex-direction: column;
}

#user-search {
    font-size: 1rem;
    font-weight: 400;
    border: none;
    border-bottom: 1px solid #ffffff;
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    padding: 0;
    box-sizing: border-box;
    resize: none;
}

#user-search::placeholder {
    font-family: "Source Code Pro", monospace;
}

#user-search:focus {
    border-color: #000000;
    outline: none;
}

.users-list {
    display: flex;
    flex-direction: column;
    margin-top: 1rem;
}

.user-item {
    display: flex;
    align-items: center;
    margin-bottom: 1rem;
    cursor: pointer;
    min-width: 0;
}

.user-item-pic {
    width: 30px;
    height: 30px;
    min-width: 30px;
    min-height: 30px;
    max-width: 30px;
    max-height: 30px;
    border-radius: 50%;
    margin-right: 1rem;
    border: 1px dashed #000;
    object-fit: cover;
    display: block;
}

.user-item-username {
    font-size: 1.25rem;
    font-weight: 600;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}


@media screen and (max-width: 1024px) {
    .container {
        flex-direction: column;
        height: auto;
    }

    .user-panel {
        width: 100%;
        min-width: 100%;
        max-width: 100%;
        border-right: none;
        padding-right: 0;
        margin-bottom: 2rem;
        overflow: visible;
    }

    .conversation-panel {
        width: 100%;
        min-width: 100%;
        padding-left: 0;
        overflow: visible;
    }

    .vertical-divider {
        width: 100%;
        height: 4px;
        margin-bottom: 2rem;
    }

    header {
        .menu a {
            font-size: 1.5rem;
        }

        .menu div {
            font-size: 1.5rem !important;
        }

        .user-button {
            width: 100px;
            height: 100px;
            margin: 10px 5px 10px 10px;
        }
    }

    #user-search {
        font-size: 2rem;
        width: 100%;
    }

    #user-search::placeholder {
        font-size: 2rem;
    }

    .user-item-pic {
        width: 80px;
        height: 80px;
        min-width: 80px;
        min-height: 80px;
        max-width: 80px;
        max-height: 80px;
    }

    .user-item-username {
        font-size: 2rem;
    }
}

.conversation-header {
    margin-bottom: 1rem;
    padding-bottom: 0.5rem;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.messages-list {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.message-text {
    padding: 0.5rem 0;
    border-radius: 1rem;
    max-width: 70%;
    overflow-wrap: break-word;
    word-break: break-word;
}

.message-me {
    align-self: flex-end;
    text-align: left;
}

.message-them {
    align-self: flex-start;
    text-align: left;
}

.chat-input-area {
    display: flex;
    flex-direction: column;
    padding: 1rem 0;
    margin-top: auto;
    background: #fff;
}

#message-input {
    resize: none;
    padding: 0;
    font-family: inherit;
    border: none;
    border-bottom: 1px solid #ffffff;
    border-radius: 0;
    font-size: 1rem;
    box-sizing: border-box;
    overflow-y: hidden;
}

#message-input:focus {
    border-color: #000000;
    outline: none;
}

#message-input::placeholder {
    font-family: "Source Code Pro", monospace;
    color: #888;
}

#send-button {
    text-decoration: none;
    font-size: 1rem;
    border: none;
    background-color: transparent;
    width: fit-content;
    padding: 0;
    font-family: inherit;
    margin-top: 0.5rem;
}

.disabled {
    color: #aaa !important;
    pointer-events: none;
    cursor: default;
}

.enabled {
    color: #000000 !important;
    pointer-events: auto;
    cursor: pointer;
}

@media screen and (max-width: 1024px) {
    #message-input {
        font-size: 1.5rem;
    }

    #send-button {
        font-size: 1.5rem;
    }
}

